<resources>
    <string name="app_name">sol e lua</string>
    <string name="musica">Musica</string>
    <string name="hist_ria">História</string>
    <string name="todo">TODO</string>
    <string name="h_muitos_anos_a_lua_e_o_sol_se_apaixonaram_o_sol_ficou_encantado_pela_beleza_da_lua_e_a_iluminava_de_paix_o_a_lua_ficou_sonhando_com_o_calor_do_sol_e_chorava_baixinho_querendo_se_aproximar_do_seu_amado_era_um_amor_bonito_que_dava_gosto_de_ver_mas_eles_se_amavam_dist_ncia_o_sol_ent_o_mandou_os_passarinhos_pedirem_a_lua_em_casamento_aquela_revoada_de_p_ssaros_fez_um_v_o_fant_stico_at_encontrar_a_lua_chegaram_e_pediram_a_lua_em_casamento_numa_linda_can_o_a_lua_ficou_cheia_de_alegria_o_casamento_foi_marcado_e_o_c_u_se_enfeitou_as_estrelas_brilharam_ainda_mais_e_as_nuvens_criaram_desenhos_no_firmamento_seria_uma_festan_a_que_duraria_um_ano_inteiro_mas_o_mar_n_o_gostou_e_avisou_aos_noivos_o_casamento_de_voc_s_n_o_pode_acontecer_esse_encontro_vai_destruir_o_mundo_o_amor_ardente_do_sol_vai_queimar_tudo_e_a_lua_com_as_suas_l_grimas_inundaria_toda_a_terra_por_isso_n_o_podem_se_casar_a_lua_apagaria_o_fogo_e_o_sol_evaporaria_a_gua_a_lua_n_o_se_importou_com_isso_queria_casar_de_qualquer_jeito_estava_completamente_apaixonada_mas_o_sol_ficou_com_medo_amava_muito_a_lua_mas_n_o_queria_destruir_o_mundo_separaram_se_ent_o_a_lua_para_um_lado_e_o_sol_para_o_outro_quando_a_lua_come_ava_a_aparecer_no_c_u_o_sol_ia_embora_a_lua_ainda_tentou_convencer_o_sol_mas_n_o_deu_jeito_e_ela_tenta_at_hoje_e_por_isso_que_de_vez_em_quando_a_lua_e_o_sol_ficam_juntos_no_c_u_mas_a_tudo_escurece_e_o_sol_foge_de_sua_amada_na_primeira_separa_o_a_lua_chorou_todo_o_dia_e_toda_a_noite_foi_ent_o_que_as_l_grimas_correram_por_cima_da_terra_at_o_mar_mas_o_mar_que_estava_zangado_com_a_lua_n_o_deixou_que_as_l_grimas_se_misturassem_com_as_suas_guas_e_hoje_o_mar_ainda_tenta_acabar_com_as_l_grimas_da_lua_com_um_estrondo_forte_que_os_ndios_chamam_de_pororoca">Há muitos anos, a Lua e o Sol se apaixonaram. O Sol ficou encantado pela beleza da Lua e a iluminava de paixão. A Lua ficou sonhando com o calor do Sol e chorava baixinho querendo se aproximar do seu amado. Era um amor bonito que dava gosto de ver. Mas eles se amavam à distância. O Sol, então, mandou os passarinhos pedirem a Lua em casamento. Aquela revoada de pássaros fez um vôo fantástico até encontrar a Lua. Chegaram e pediram a Lua em casamento numa linda canção. A Lua ficou cheia de alegria. O casamento foi marcado e o céu se enfeitou. As estrelas brilharam ainda mais e as nuvens criaram desenhos no firmamento. Seria uma festança que duraria um ano inteiro. Mas o mar não gostou e avisou aos noivos: - O casamento de vocês não pode acontecer! Esse encontro vai destruir o mundo. O amor ardente do Sol vai queimar tudo e a Lua com as suas lágrimas inundaria toda a Terra. Por isso não podem se casar. A Lua apagaria o fogo e o Sol evaporaria a água. A Lua não se importou com isso. Queria casar de qualquer jeito. Estava completamente apaixonada. Mas o Sol ficou com medo. Amava muito a Lua, mas não queria destruir o mundo. Separaram-se, então, a Lua para um lado e o Sol para o outro. Quando a Lua começava a aparecer no céu, o Sol ia embora. A Lua ainda tentou convencer o Sol. Mas não deu jeito. E ela tenta até hoje. E é por isso que, de vez em quando, a Lua e o Sol ficam juntos no céu. Mas aí tudo escurece e o Sol foge de sua amada. Na primeira separação, a Lua chorou todo o dia e toda a noite. Foi então que as lágrimas correram por cima da Terra até o mar. Mas o mar, que estava zangado com a Lua, não deixou que as lágrimas se misturassem com as suas águas. E, hoje, o mar ainda tenta acabar com as lágrimas da Lua com um estrondo forte, que os índios chamam de pororoca.</string>
    <string name="button">Button</string>
    <string name="voltar" />
    <string name="todo0">TODO</string>
    <string name="hist_ria1">História</string>
    <string name="todo2">TODO</string>
    <string name="todo33">TODO</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="historia">Historia</string>
    <string name="letra">Letra</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="o_sol_pediu_a_lua_em_casamento_disse_que_j_a_amava_h_muito_tempo_desde_a_poca_dos_dinossauros_pterod_tilos_tiranossauros_quando_nem_existia_a_bicicleta_nem_o_velotrol_nem_a_motocicleta_mas_a_lua_achou_aquilo_t_o_estranho_uma_bola_quente_que_nem_toma_banho_imagine_s_tenha_d_pois_meu_cora_o_n_o_pertence_a_ningu_m_s_a_inspira_es_de_todos_os_casais_dos_grandes_poetas_aos_mais_normais_sai_pra_la_rapaz_o_sol_pediu_a_lua_em_casamento_e_a_lua_disse_n_o_sei_n_o_sei_n_o_sei_me_d_um_tempo_e_24_horas_depois_o_sol_nasceu_a_lua_se_p_s_e_o_sol_pediu_a_lua_em_casamento_e_a_lua_disse_n_o_sei_n_o_sei_n_o_sei_me_d_um_tempo_o_sol_congelou_seu_cora_o_mas_o_astro_rei_com_todos_os_seus_planetas_cometas_asteroides_terra_marte_v_nus_net_nos_e_ur_nos_foi_se_apaixonar_justo_por_ela_que_o_despreza_e_o_deixa_esperar_acontece_que_o_sol_n_o_se_conformou_foi_pedir_ao_vento_para_lhe_ajudar_mas_o_vento_nem_se_quer_parou_pois_n_o_tinha_tempo_para_conversar_o_sol_sem_saber_mais_o_que_fazer_tanto_amor_pra_dar_e_come_ou_a_chorar_e_a_derreter_come_ou_a_chover_e_a_molhar_e_a_escurecer_o_sol_pediu_a_lua_em_casamento_e_a_lua_disse_n_o_sei_n_o_sei_n_o_sei_me_d_um_tempo_e_24_horas_se_passaram_e_outra_vez_o_sol_se_p_s_a_lua_nasceu_e_de_novo_e_de_novo_e_de_novo_o_sol_pediu_a_lua_em_casamento_e_a_lua_disse_n_o_sei_n_o_sei_n_o_sei_me_d_um_tempo_o_sol_congelou_seu_cora_o_se_a_lua_n_o_te_quer_tudo_bem_voc_lindo_cara_e_seu_brilho_vai_muito_mais_al_m_um_dia_voc_vai_encontrar_algu_m_que_com_certeza_vai_te_amar_tamb_m">O sol pediu a lua em casamento Disse que já a amava há muito tempo Desde a época dos dinossauros, pterodátilos, tiranossauros Quando nem existia a bicicleta nem o velotrol nem a motocicleta Mas a lua achou aquilo tão estranho Uma bola quente que nem toma banho Imagine só tenha dó Pois meu coração não pertence a ninguém Só a inspirações de todos os casais Dos grandes poetas aos mais normais Sai pra la rapaz! O sol pediu a lua em casamento E a lua, disse Não sei, não sei, não sei Me dá um tempo E 24 horas depois o sol nasceu a lua se pôs e O sol pediu a lua em casamento E a lua, disse Não sei, não sei, não sei Me dá um tempo O sol congelou seu coração Mas o astro rei Com todos os seus planetas Cometas, asteroides Terra, marte, vênus, netúnos e urânos Foi se apaixonar justo por ela Que o despreza e o deixa esperar Acontece que o sol não se conformou Foi pedir ao vento para lhe ajudar Mas o vento nem se quer parou Pois não tinha tempo para conversar O sol sem saber mais o que fazer Tanto amor pra dar E começou a chorar E a derreter Começou a chover, e a molhar E a escurecer O sol pediu a lua em casamento E a lua, disse Não sei, não sei, não sei Me dá um tempo E 24 horas se passaram e outra vez o sol se pôs, a lua nasceu E de novo e de novo e de novo O sol pediu a lua em casamento E a lua, disse Não sei, não sei, não sei Me dá um tempo O sol congelou seu coração Se a lua não te quer, tudo bem Você é lindo cara e seu brilho vai muito mais além! Um dia você vai encontrar alguém Que com certeza vai te amar também</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="o_sol_pediu_a_lua_em_casamento_disse_que_j_a_amava_h_muito_tempo_desde_a_poca_dos_dinossauros_pterod_tilos_tiranossauros_quando_nem_existia_a_bicicleta_nem_o_velotrol_nem_a_motocicleta_mas_a_lua_achou_aquilo_t_o_estranho_uma_bola_quente_que_nem_toma_banho_imagine_s_tenha_d_pois_meu_cora_o_n_o_pertence_a_ningu_m_s_a_inspira_es_de_todos_os_casais_dos_grandes_poetas_aos_mais_normais_sai_pra_la_rapaz_o_sol_pediu_a_lua_em_casamento_e_a_lua_disse_n_o_sei_n_o_sei_n_o_sei_me_d_um_tempo_e_24_horas_depois_o_sol_nasceu_a_lua_se_p_s_e_o_sol_pediu_a_lua_em_casamento_e_a_lua_disse_n_o_sei_n_o_sei_n_o_sei_me_d_um_tempo_o_sol_congelou_seu_cora_o_mas_o_astro_rei_com_todos_os_seus_planetas_cometas_asteroides_terra_marte_v_nus_net_nos_e_ur_nos_foi_se_apaixonar_justo_por_ela_que_o_despreza_e_o_deixa_esperar_acontece_que_o_sol_n_o_se_conformou_foi_pedir_ao_vento_para_lhe_ajudar_mas_o_vento_nem_se_quer_parou_pois_n_o_tinha_tempo_para_conversar_o_sol_sem_saber_mais_o_que_fazer_tanto_amor_pra_dar_e_come_ou_a_chorar_e_a_derreter_come_ou_a_chover_e_a_molhar_e_a_escurecer_o_sol_pediu_a_lua_em_casamento_e_a_lua_disse_n_o_sei_n_o_sei_n_o_sei_me_d_um_tempo_e_24_horas_se_passaram_e_outra_vez_o_sol_se_p_s_a_lua_nasceu_e_de_novo_e_de_novo_e_de_novo_o_sol_pediu_a_lua_em_casamento_e_a_lua_disse_n_o_sei_n_o_sei_n_o_sei_me_d_um_tempo_o_sol_congelou_seu_cora_o_se_a_lua_n_o_te_quer_tudo_bem_voc_lindo_cara_e_seu_brilho_vai_muito_mais_al_m_um_dia_voc_vai_encontrar_algu_m_que_com_certeza_vai_te_amar_tamb_m_o_pequenino">O sol pediu a lua em casamento Disse que já a amava há muito tempo Desde a época dos dinossauros, pterodátilos, tiranossauros Quando nem existia a bicicleta nem o velotrol nem a motocicleta Mas a lua achou aquilo tão estranho Uma bola quente que nem toma banho Imagine só tenha dó Pois meu coração não pertence a ninguém Só a inspirações de todos os casais Dos grandes poetas aos mais normais Sai pra la rapaz! O sol pediu a lua em casamento E a lua, disse Não sei, não sei, não sei Me dá um tempo E 24 horas depois o sol nasceu a lua se pôs e O sol pediu a lua em casamento E a lua, disse Não sei, não sei, não sei Me dá um tempo O sol congelou seu coração Mas o astro rei Com todos os seus planetas Cometas, asteroides Terra, marte, vênus, netúnos e urânos Foi se apaixonar justo por ela Que o despreza e o deixa esperar Acontece que o sol não se conformou Foi pedir ao vento para lhe ajudar Mas o vento nem se quer parou Pois não tinha tempo para conversar O sol sem saber mais o que fazer Tanto amor pra dar E começou a chorar E a derreter Começou a chover, e a molhar E a escurecer O sol pediu a lua em casamento E a lua, disse Não sei, não sei, não sei Me dá um tempo E 24 horas se passaram e outra vez o sol se pôs, a lua nasceu E de novo e de novo e de novo O sol pediu a lua em casamento E a lua, disse Não sei, não sei, não sei Me dá um tempo O sol congelou seu coração Se a lua não te quer, tudo bem Você é lindo cara e seu brilho vai muito mais além! Um dia você vai encontrar alguém Que com certeza vai te amar também</string>
    <string name="abrir_o_youtube">Abrir o YouTube</string>
    <string name="menu2">Voltar</string>
</resources>